--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_alarm_manager_plus: ^2.0.2
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_local_notifications: ^16.3.1+1
   freezed_annotation: ^2.4.1
   go_router: ^13.0.0
   google_fonts: ^6.1.0
   http: ^1.2.0
   intl: ^0.19.0
+  like_button: ^2.0.5
+  path: ^1.8.3
+  path_provider: ^2.1.2
+  rxdart: ^0.27.7
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
 
 dev_dependencies:
   build_runner: ^2.4.7
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.6
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
